# hk_Rl

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  environment-mod-build.yml  environment.yml  hollow_knight_rl_prd.md
.githooks/: pre-commit
configs/: base.yaml
docs/: PRD.md  action_space.md  architecture.md  episode_lifecycle.md  (+10 more)
python/: README.md  pyproject.toml
python/hkrl/: __init__.py  __main__.py  cli.py  env.py  protocol.py  reward.py  spaces.py  wrappers.py
python/hkrl/coordinator/: __init__.py  coordinator.py  curriculum.py  dashboard.py  profiling.py  task_sampler.py
python/hkrl/eval/: __init__.py  evaluator.py  report.py  scripted_policies.py
python/hkrl/learner/: __init__.py  batch_intake.py  checkpoint_payload.py  checkpoint_registry.py  learner_server.py
python/hkrl/models/: __init__.py  base.py  encoders.py  entity_attention.py  heads.py  mlp.py  recurrent_policy.py
python/hkrl/schema/: __init__.py
python/hkrl/training/: __init__.py  appo.py  batch_io.py  gae.py  numerics.py  ppo.py  recurrent_buffer.py  recurrent_ppo.py  rollout_buffer.py
python/hkrl/transport/: __init__.py  base.py  factory.py  shared_memory.py  tcp.py
python/hkrl/utils/: __init__.py  config.py  logging.py  metrics.py  registry.py  release.py  seeding.py
python/hkrl/worker/: __init__.py  checkpoint_client.py  game_worker.py
python/tests/: conftest.py  test_appo.py  test_batch_intake.py  test_check_env_script.py  test_checkpoint_client.py  test_checkpoint_registry.py  test_cli.py  test_config.py  test_coordinator.py  test_curriculum.py  test_dashboard.py  test_encoders.py  test_entity_attention.py  test_env_smoke.py  test_eval_report.py  test_evaluator.py  test_game_worker.py  test_learner_server.py  test_logging.py  test_mlp_model.py  test_model_heads.py  test_ppo.py  test_profile_report.py  test_protocol.py  test_recurrent_buffer.py  test_recurrent_policy.py  test_recurrent_ppo.py  test_release_checklist.py  test_release_evidence.py  test_reward.py  test_rollout_buffer.py  test_run_coordinator_script.py  test_run_eval_script.py  test_run_learner_script.py  test_run_phase8_smoke_script.py  test_run_worker_script.py  test_scripted_policies.py  test_shared_memory_transport.py  test_spaces.py  test_task_sampler.py  (+4 more)
(+75 files in other folders)
